# SFML_GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README  README.md  build.gradle  settings.gradle
GLTest/: Main.cpp  TestState.cpp  TestState.hpp
NetworkingTest/: Main.cpp  TesterConnection.cpp  TesterConnection.hpp
UnitTests/: TestEC.cpp  TestStateStack.cpp  TestUtility.cpp
buildWin/: Makefile
gradle/wrapper/: gradle-wrapper.properties
linux_x86/: build.gradle
linux_x86_64/: build.gradle
src/: CMakeLists.txt  animatedSprite.cpp  animatedSprite.hpp  component.cpp  component.hpp  component.inl  componentHolder.cpp  componentHolder.hpp  componentHolder.inl  connection.cpp  connection.hpp  context.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  main.cpp  musicPlayer.cpp  musicPlayer.hpp  networkIdentifiers.cpp  networkIdentifiers.hpp  resourceHolder.hpp  resourceHolder.inl  resourceIdentifiers.hpp  resourceManager.cpp  resourceManager.hpp  sceneNode.cpp  sceneNode.hpp  server.cpp  server.hpp  soundPlayer.cpp  soundPlayer.hpp  state.cpp  state.hpp  stateIdentifiers.hpp  stateStack.cpp  stateStack.hpp
src/cmake/: SFML_GameEngineConfig.cmake
src/ec/: component.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  nMove.hpp  node.hpp  nodeMove.cpp  nodeMove.hpp  system.cpp  system.hpp
src/engine/: GLHelper.cpp  GLHelper.hpp  animatedSprite.hpp  connection.cpp  connection.hpp  context.cpp  context.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  musicPlayer.cpp  musicPlayer.hpp  networkIdentifiers.cpp  networkIdentifiers.hpp  resourceHolder.hpp  resourceHolder.inl  resourceIdentifiers.cpp  resourceIdentifiers.hpp  resourceManager.cpp  resourceManager.hpp  sceneNode.cpp  sceneNode.hpp  soundPlayer.cpp  soundPlayer.hpp  state.cpp  state.hpp  stateIdentifiers.hpp  stateStack.cpp  stateStack.hpp  utility.cpp  utility.hpp
src/engine/ec/: cAcceleration.hpp  cPosition.hpp  cVelocity.hpp  engine.hpp  nMove.cpp  node.hpp  system.hpp
windows_x86/: build.gradle
windows_x86_64/: build.gradle
